--- a/src/i18n/te.json
+++ b/src/i18n/te.json
@@ -1,10 +1,10 @@
 {
   "brand": "శ్రీ సిద్ధి వినాయక స్వామి",
-  "location": "రుద్రవారి మెరాఖా, Path Kunavaram junction, Chintalapalli, Razole, Andhra Pradesh",
+  "location": "రుద్రవారి మెరాఖా, పాత కూనవరం జంక్షన్, చింతలపల్లి, రాజోల్, ఆంధ్ర ప్రదేశ్",
   "nav": {
     "home": "హోమ్",
     "chavithi": "వినాయక చవితి",
-    "performances": "వేదిక కార్యక్రమాలు",
+    "performances": "కార్యక్రమాలు",
     "donations": "దానాలు",
     "gallery": "గ్యాలరీ",
     "about": "వినాయక స్వామి గురించి",
@@ -15,7 +15,7 @@
   "hero": {
     "title": "శ్రీ సిద్ధి వినాయక స్వామి ఆలయానికి స్వాగతం",
     "location": "రుద్రవారి మెరాఖా,  పాత కూనవరం జంక్షన్, చింతలపల్లి, రాజోల్, ఆంధ్ర ప్రదేశ్",
-    "desc": "ఉత్సవాలు, రోజు వారీ కార్యక్రమాలు, సేవా వివరాలు, తెలుసుకోండి."
+    "desc": "1980 లో స్థాపించబడిన శ్రీ సిద్ధి వినాయక ఆలయం కూనవరం జంక్షన్‌లోని రుద్రవారి మెరక పాట వద్ద ఉన్న భక్తి ప్రదేశం. గణేశుడికి అంకితం చేయబడిన ఈ ఆలయం భక్తులకు విశ్వాసం మరియు ఆధ్యాత్మికతకు కేంద్రంగా ఉంది, సమాజంలో శాంతి, భక్తి మరియు సాంస్కృతిక సంప్రదాయాలను పెంపొందిస్తుంది."
   },
   "about": {
     "title": "శ్రీ వినాయక స్వామి",
@@ -28,7 +28,10 @@
     "date": "ఉత్సవ తేదీ",
     "venue": "స్థలం",
     "timings": "సమయాలు",
-    "rituals": "ముఖ్య క్రతువులు"
+    "rituals": "ముఖ్య క్రతువులు",
+    "venue_content": "శ్రీ సిద్ధి వినాయక స్వామి ఆలయం, రుద్రవారి మెరకా, పాత కూనవరం జంక్షన్",
+    "pooja_label": "సంకలం & ప్రథమ పూజ - 09:15 AM",
+    "pooja_lead": "పూజా కార్యక్రమాలు ఇంటిపల్లి నూకరాజు మరియు శ్రీ మతి గంగాభవాని దంపతులచే నిర్వహించబడతాయి."
   },
   "performances": {
     "title": "వేదిక కార్యక్రమాలు (రోజు వారీగా)",
@@ -68,6 +71,15 @@
   "gallery": {
     "title": "గ్యాలరీ",
     "lead": "ఉత్సవ క్షణాలు మరియు దేవాలయ దృశ్యాలు."
+  },
+  "AnnaSamaradhana": {
+    "title": "అన్నసమరధానం",
+    "lead": "View photos and videos of the temple."
+  },
+
+  "Laddu": {
+    "title": "లడ్డు పటా",
+    "lead": "View photos and videos of the temple."
   },
   "map": { "title": "గ్యాలరీ", "lead": "మేము దేవాలయం లోనే ఉంది." },
   "lang": {
